--- a/swiftTest/swiftTest/Views/ComicListTableViewCell.xib
+++ b/swiftTest/swiftTest/Views/ComicListTableViewCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="116" id="KGk-i7-Jjw" customClass="ComicListTableViewCell" customModule="swiftTest" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="116" id="KGk-i7-Jjw" customClass="ComicListTableViewCell" customModule="swiftTest" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="116"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -20,13 +20,14 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nxF-U4-B0z">
-                        <rect key="frame" x="10" y="10" width="80" height="95.5"/>
+                        <rect key="frame" x="10" y="10" width="160" height="95.5"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="80" id="rxj-KC-axR"/>
+                            <constraint firstAttribute="width" constant="160" id="rxj-KC-axR"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cf1-Oy-k1U">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cf1-Oy-k1U">
                         <rect key="frame" x="210" y="10" width="100" height="15"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="15" id="a26-9C-iQe"/>
                             <constraint firstAttribute="width" constant="100" id="bAR-db-Ynw"/>
@@ -35,13 +36,14 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FbP-LU-x1l">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FbP-LU-x1l">
                         <rect key="frame" x="160" y="35" width="150" height="21"/>
+                        <color key="backgroundColor" red="0.25882352939999997" green="0.61960784310000006" blue="0.90980392160000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="150" id="FUX-hc-E8E"/>
                             <constraint firstAttribute="height" constant="21" id="tpu-aD-qHj"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -59,7 +61,9 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="titleLab" destination="FbP-LU-x1l" id="A2t-ue-glp"/>
+                <outlet property="titleLabWidthConstant" destination="FUX-hc-E8E" id="F7U-jn-OZU"/>
                 <outlet property="userNameLab" destination="cf1-Oy-k1U" id="0BJ-F2-SVh"/>
+                <outlet property="userNameWidthConstant" destination="bAR-db-Ynw" id="KOo-Rr-z7f"/>
                 <outlet property="verticalImg" destination="nxF-U4-B0z" id="NVP-tm-MoM"/>
             </connections>
             <point key="canvasLocation" x="25" y="16"/>
