--- a/swiftTest/swiftTest/ViewControllers/MineViewController.xib
+++ b/swiftTest/swiftTest/ViewControllers/MineViewController.xib
@@ -12,6 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MineViewController" customModule="swiftTest" customModuleProvider="target">
             <connections>
+                <outlet property="tableView" destination="qeX-Cu-otB" id="k5F-mq-3Db"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
